--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -3,7 +3,47 @@
   <!-- There is inline padding applied to this node using styles.
     This padding value depends on the mat-icon-button width. -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-      {{node.name}}
+      {{node.name}}    
+          <mat-table [dataSource]="node.finanicalElementExts" class="mytable">
+      <ng-container matColumnDef="concept">
+        <mat-header-cell *matHeaderCellDef i18n="@@queryResultsConcept"
+          >Concept</mat-header-cell
+        >
+        <mat-cell *matCellDef="let element" matTooltip="{{ element.concept }}">
+          {{ element.concept }}
+        </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="quarter">
+        <mat-header-cell
+          *matHeaderCellDef
+          i18n="@@queryResultsQuarter"
+          >Quarter</mat-header-cell
+        >
+        <mat-cell *matCellDef="let element"> {{ element.quarter }} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="currency">
+        <mat-header-cell
+          *matHeaderCellDef
+          i18n="@@queryResultsCurrency"
+          >Currency</mat-header-cell
+        >
+        <mat-cell *matCellDef="let element"> {{ element.currency }} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="value">
+        <mat-header-cell
+          *matHeaderCellDef
+          i18n="@@queryResultsValue"
+          >Value</mat-header-cell
+        >
+        <mat-cell *matCellDef="let element"> {{ element.value }} </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    </mat-table>  
   </mat-tree-node>
   <!-- This is the tree node template for expandable nodes -->
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
@@ -14,7 +54,7 @@
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
         </button>
-        {{node.name}}
+        {{node.name}}        
       </div>
       <!-- There is inline padding applied to this div using styles.
           This padding value depends on the mat-icon-button width.  -->
