--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -3,8 +3,8 @@
   <!-- There is inline padding applied to this node using styles.
     This padding value depends on the mat-icon-button width. -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <div *ngIf="!node?.finanicalElementExts">{{node.name}}</div>    
-    <mat-table [dataSource]="node.finanicalElementExts" class="mytable">
+    <div *ngIf="!node?.finanicalElementExts">{{node.name}}</div>   
+    <mat-table *ngIf="node.isOpen" [dataSource]="node.finanicalElementExts" class="mytable">
       <ng-container matColumnDef="concept">
         <mat-header-cell *matHeaderCellDef i18n="@@queryResultsConcept"
           >Concept</mat-header-cell
@@ -48,7 +48,7 @@
   <!-- This is the tree node template for expandable nodes -->
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
       <div class="mat-tree-node">
-        <button mat-icon-button matTreeNodeToggle
+        <button mat-icon-button (click)="toggleNode(node)"
                 [attr.aria-label]="'Toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
