feat: add spinner

--- a/frontend/src/angular/src/app/base/components/dialog-spinner/dialog-spinner.component.scss
+++ b/frontend/src/angular/src/app/base/components/dialog-spinner/dialog-spinner.component.scss
@@ -12,6 +12,7 @@
  */
 
 .header {
+	margin-top: 20px;
   text-align: center;
 }
 
@@ -20,4 +21,8 @@
   width: 100%;
   justify-content: center;
   align-content: center;
+}
+
+.example-margin {
+	margin: 50px
 }
