--- a/frontend/src/angular/src/app/base/components/dialog-spinner/dialog-spinner.component.scss
+++ b/frontend/src/angular/src/app/base/components/dialog-spinner/dialog-spinner.component.scss
@@ -12,7 +12,7 @@
  */
 
 .header {
-	margin-top: 20px;
+  margin-top: 20px;
   text-align: center;
 }
 
@@ -24,5 +24,5 @@
 }
 
 .example-margin {
-	margin: 50px
+  margin: 50px;
 }
