--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -1,10 +1,18 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+<mat-tree
+  [dataSource]="dataSource"
+  [treeControl]="treeControl"
+  class="example-tree"
+>
   <!-- This is the tree node template for leaf nodes -->
   <!-- There is inline padding applied to this node using styles.
     This padding value depends on the mat-icon-button width. -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <div *ngIf="!node?.finanicalElementExts">{{node.name}}</div>   
-    <mat-table *ngIf="node.isOpen" [dataSource]="node.finanicalElementExts" class="mytable">
+    <div *ngIf="!node?.finanicalElementExts">{{ node.name }}</div>
+    <mat-table
+      *ngIf="node.isOpen"
+      [dataSource]="node.finanicalElementExts"
+      class="mytable"
+    >
       <ng-container matColumnDef="concept">
         <mat-header-cell *matHeaderCellDef i18n="@@queryResultsConcept"
           >Concept</mat-header-cell
@@ -15,27 +23,21 @@
       </ng-container>
 
       <ng-container matColumnDef="quarter">
-        <mat-header-cell
-          *matHeaderCellDef
-          i18n="@@queryResultsQuarter"
+        <mat-header-cell *matHeaderCellDef i18n="@@queryResultsQuarter"
           >Quarter</mat-header-cell
         >
         <mat-cell *matCellDef="let element"> {{ element.quarter }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="currency">
-        <mat-header-cell
-          *matHeaderCellDef
-          i18n="@@queryResultsCurrency"
+        <mat-header-cell *matHeaderCellDef i18n="@@queryResultsCurrency"
           >Currency</mat-header-cell
         >
         <mat-cell *matCellDef="let element"> {{ element.currency }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="value">
-        <mat-header-cell
-          *matHeaderCellDef
-          i18n="@@queryResultsValue"
+        <mat-header-cell *matHeaderCellDef i18n="@@queryResultsValue"
           >Value</mat-header-cell
         >
         <mat-cell *matCellDef="let element"> {{ element.value }} </mat-cell>
@@ -43,25 +45,29 @@
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>  
+    </mat-table>
   </mat-tree-node>
   <!-- This is the tree node template for expandable nodes -->
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-      <div class="mat-tree-node">
-        <button mat-icon-button (click)="toggleNode(node)"
-                [attr.aria-label]="'Toggle ' + node.name">
-          <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-          </mat-icon>
-        </button>
-        {{node.name}}        
-      </div>
-      <!-- There is inline padding applied to this div using styles.
+    <div class="mat-tree-node">
+      <button
+        mat-icon-button
+        (click)="toggleNode(node)"
+        [attr.aria-label]="'Toggle ' + node.name"
+      >
+        <mat-icon class="mat-icon-rtl-mirror">
+          {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
+        </mat-icon>
+      </button>
+      {{ node.name }}
+    </div>
+    <!-- There is inline padding applied to this div using styles.
           This padding value depends on the mat-icon-button width.  -->
-      <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
-          role="group">
-        <ng-container matTreeNodeOutlet></ng-container>
+    <div
+      [class.example-tree-invisible]="!treeControl.isExpanded(node)"
+      role="group"
+    >
+      <ng-container matTreeNodeOutlet></ng-container>
     </div>
   </mat-nested-tree-node>
 </mat-tree>
-
