--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -6,6 +6,7 @@
         <button
           mat-raised-button
           color="primary"
+          [disabled]="queryForm.invalid"
           (click)="search()"
           i18n="@@search"
         >
