--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -6,7 +6,7 @@
         <button
           mat-raised-button
           color="primary"
-          [disabled]="queryForm.invalid"
+          [disabled]="!formStatus || formStatus.toLowerCase() != 'valid'"
           (click)="search()"
           i18n="@@search"
         >
