--- a/frontend/src/angular/src/app/login/component/login/login.component.scss
+++ b/frontend/src/angular/src/app/login/component/login/login.component.scss
@@ -9,3 +9,10 @@ ul {
 .spacer {
   margin-left: 20px;
 }
+
+.spinner-container {
+	display: flex; 
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+}
