feat: eye candy

--- a/frontend/src/angular/src/app/login/component/login/login.component.scss
+++ b/frontend/src/angular/src/app/login/component/login/login.component.scss
@@ -16,3 +16,9 @@ ul {
 	align-items: center;
 	padding: 20px;
 }
+
+::ng-deep {
+.cdk-overlay-backdrop-showing {
+	backdrop-filter: blur(3px);
+}
+}
