--- a/frontend/src/angular/src/app/financial-data/components/import-financials/import-financials.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/import-financials/import-financials.component.html
@@ -22,7 +22,7 @@
           />
         </mat-form-field>
       </li>
-      <li>
+      <li class="buttons-element">
         <button
           mat-button
           (click)="okClick()"
