--- a/frontend/src/angular/src/app/portfolios/components/add-symbol/add-symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/add-symbol/add-symbol.component.html
@@ -98,7 +98,7 @@
           Weight: {{ selSymbol.weight }}
         </div>
       </li>
-      <li>
+      <li class="buttons-element">
         <button
           mat-button
           (click)="onAddClick()"
