--- a/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.scss
@@ -1,3 +1,9 @@
+.grid-container {
+	display: grid;	
+	grid-template-columns: max-content 1fr;
+	column-gap: 10px;
+}
+
 .symbol-element {
   margin: 5px 0;
 }
