--- a/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.html
@@ -27,7 +27,7 @@
       >
       <div class="my-stocks" (click)="updateStock($event, element)">
         <div class="my-stock-amount">{{
-          !element.portfolioElements || element.id !== localPortfolio.id
+          !element?.portfolioElements || element.id !== localPortfolio.id
             ? !!element?.weight
               ? element.weight
               : "--"
