--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -73,8 +73,8 @@
             placeholder="name"
           />
           <mat-autocomplete #autoName="matAutocomplete" autoActiveFirstOption>
-            <mat-option *ngFor="let symbol of symbols" [value]="symbol.symbol">
-              {{ symbol.symbol }}
+            <mat-option *ngFor="let sfSymbolName of sfSymbolNames" [value]="sfSymbolName.name">
+              {{ sfSymbolName.name }}
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
