feat: show label

--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -17,7 +17,7 @@
         <mat-header-cell *matHeaderCellDef i18n="@@queryResultsConcept"
           >Concept</mat-header-cell
         >
-        <mat-cell *matCellDef="let element" matTooltip="{{ element.concept }}">
+        <mat-cell *matCellDef="let element" matTooltip="{{ element.label }}">
           {{ element.concept }}
         </mat-cell>
       </ng-container>
