--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -18,8 +18,8 @@
           >Concept</mat-header-cell
         >
         <mat-cell *matCellDef="let element" matTooltip="{{ element.label }}" (click)="conceptClick(element)">          
-          	<span style="white-space: nowrap;">
-          	<mat-icon inline="true" aria-hidden="false" aria-label="info" fontIcon="info_outline" style="vertical-align: middle;" class="material-symbols-outlined"></mat-icon> 
+          	<span class="single-line">
+          	<mat-icon inline="true" aria-hidden="false" aria-label="info" fontIcon="info_outline" class="align-icon"></mat-icon> 
           {{ element.concept }}</span>
         </mat-cell>
       </ng-container>
