--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.scss
@@ -2,6 +2,14 @@
   display: none;
 }
 
+.single-line {
+	white-space: nowrap;
+}
+
+.align-icon {
+	vertical-align: middle;
+}
+
 .example-tree ul,
 .example-tree li {
   margin-top: 0;
