feat: bottom sheet first step

--- a/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/result-tree/result-tree.component.html
@@ -73,3 +73,15 @@
     </div>
   </mat-nested-tree-node>
 </mat-tree>
+
+<ng-template #bottomSheet>
+	<div>
+		{{financialElement.concept}}
+	</div>
+	<div>
+		{{financialElement.label}}
+	</div>
+	<div>
+		{{financialElement.info}}
+	</div>
+</ng-template>
