--- a/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.html
@@ -23,18 +23,25 @@
         *matCellDef="let element"
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell table-cell-hover"
-        [class.table-cell-hover]="element.id !== localPortfolio.id" 
+        [class.table-cell-hover]="element.id !== localPortfolio.id"
       >
-      <div class="my-stocks" (click)="updateStock($event, element)">
-        <div class="my-stock-amount">{{
-          !element?.portfolioElements || element.id !== localPortfolio.id
-            ? !!element?.weight
-              ? element.weight
-              : "--"
-            : element?.portfolioElements?.length
-        }}</div>      
-      <mat-icon fontIcon="more_vert" [class.icon-disabled]="!!element.symbols && element.id === localPortfolio.id"></mat-icon>
-      </div>      
+        <div class="my-stocks" (click)="updateStock($event, element)">
+          <div class="my-stock-amount">
+            {{
+              !element?.portfolioElements || element.id !== localPortfolio.id
+                ? !!element?.weight
+                  ? element.weight
+                  : "--"
+                : element?.portfolioElements?.length
+            }}
+          </div>
+          <mat-icon
+            fontIcon="more_vert"
+            [class.icon-disabled]="
+              !!element.symbols && element.id === localPortfolio.id
+            "
+          ></mat-icon>
+        </div>
       </td>
     </ng-container>
 
@@ -46,7 +53,7 @@
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell"
       >
-        {{ !element.month1 ? "--" : (element.month1 | number: "1.2-5") }}
+        {{ !element.month1 ? "--" : (element.month1 | number : "1.2-5") }}
       </td>
     </ng-container>
 
@@ -58,7 +65,7 @@
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell"
       >
-        {{ !element.month6 ? "--" : (element.month6 | number: "1.2-5") }}
+        {{ !element.month6 ? "--" : (element.month6 | number : "1.2-5") }}
       </td>
     </ng-container>
 
@@ -70,7 +77,7 @@
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell"
       >
-        {{ !element.year1 ? "--" : (element.year1 | number: "1.2-5") }}
+        {{ !element.year1 ? "--" : (element.year1 | number : "1.2-5") }}
       </td>
     </ng-container>
 
@@ -82,7 +89,7 @@
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell"
       >
-        {{ !element.year2 ? "--" : (element.year2 | number: "1.2-5") }}
+        {{ !element.year2 ? "--" : (element.year2 | number : "1.2-5") }}
       </td>
     </ng-container>
 
@@ -94,7 +101,7 @@
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell"
       >
-        {{ !element.year5 ? "--" : (element.year5 | number: "1.2-5") }}
+        {{ !element.year5 ? "--" : (element.year5 | number : "1.2-5") }}
       </td>
     </ng-container>
 
@@ -106,7 +113,7 @@
         [class.portfolio-line]="element.id === localPortfolio.id"
         class="table-cell"
       >
-        {{ !element.year10 ? "--" : (element.year10 | number: "1.2-5") }}
+        {{ !element.year10 ? "--" : (element.year10 | number : "1.2-5") }}
       </td>
     </ng-container>
 
