--- a/frontend/src/angular/src/app/login/component/login/login.component.html
+++ b/frontend/src/angular/src/app/login/component/login/login.component.html
@@ -1,7 +1,10 @@
 <div mat-dialog-content>
   <mat-tab-group>
     <mat-tab i18n-label="@@loginLogin" label="Login">
-      <ng-container [ngTemplateOutlet]="waitingSpinner" *ngIf="waitingForResponse"></ng-container>
+      <ng-container
+        [ngTemplateOutlet]="waitingSpinner"
+        *ngIf="waitingForResponse"
+      ></ng-container>
       <form [formGroup]="loginForm" novalidate *ngIf="!waitingForResponse">
         <ul>
           <li>
@@ -53,7 +56,10 @@
       </form>
     </mat-tab>
     <mat-tab i18n-label="@@signin" label="Signin">
-    <ng-container [ngTemplateOutlet]="waitingSpinner" *ngIf="waitingForResponse"></ng-container>
+      <ng-container
+        [ngTemplateOutlet]="waitingSpinner"
+        *ngIf="waitingForResponse"
+      ></ng-container>
       <form [formGroup]="signinForm" novalidate *ngIf="!waitingForResponse">
         <ul>
           <li>
@@ -137,9 +143,9 @@
 
 <ng-template #waitingSpinner>
   <div class="spinner-container">
-  	<div>
-  		<h1 i18n="@@loginWaiting">Waiting...</h1>
-  		<mat-spinner></mat-spinner>  		
-  	</div>
+    <div>
+      <h1 i18n="@@loginWaiting">Waiting...</h1>
+      <mat-spinner></mat-spinner>
+    </div>
   </div>
 </ng-template>
