--- a/frontend/src/angular/src/app/login/component/login/login.component.scss
+++ b/frontend/src/angular/src/app/login/component/login/login.component.scss
@@ -1,3 +1,15 @@
+/**
+ *    Copyright 2019 Sven Loesekann
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+	   http://www.apache.org/licenses/LICENSE-2.0
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+ */
 ul {
   list-style-type: none;
 }
@@ -11,14 +23,14 @@ ul {
 }
 
 .spinner-container {
-	display: flex; 
-	justify-content: center;
-	align-items: center;
-	padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
 ::ng-deep {
-.cdk-overlay-backdrop-showing {
-	backdrop-filter: blur(3px);
-}
+  .cdk-overlay-backdrop-showing {
+    backdrop-filter: blur(3px);
+  }
 }
