--- a/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.scss
@@ -1,7 +1,19 @@
+/**
+ *    Copyright 2019 Sven Loesekann
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+	   http://www.apache.org/licenses/LICENSE-2.0
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+ */
 .grid-container {
-	display: grid;	
-	grid-template-columns: max-content 1fr;
-	column-gap: 10px;
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  column-gap: 10px;
 }
 
 .symbol-element {
@@ -33,5 +45,5 @@
 }
 
 .buttons-element {
-	margin-top: 15px;
+  margin-top: 15px;
 }
