--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
@@ -1,3 +1,3 @@
 <p>portfolio-timechart works!</p>
 <div>{{selPortfolio?.id}}</div>
-<app-time-chart></app-time-chart>
+<app-date-time-chart></app-date-time-chart>
