--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.html
@@ -1,1 +1,10 @@
-<p>time-chart works!</p>
+<div class="time-chart">
+	<div class="time-chart-header">
+		<div *ngIf="showDays">
+			showDays
+		</div>
+		<div *ngIf="!showDays">
+			!showDays
+		</div>
+	</div>
+</div>
